[gd_scene load_steps=6 format=3 uid="uid://6fwhbt860hx8"]

[ext_resource type="Script" uid="uid://yuc4ec4uchn8" path="res://scripts/player_ui.gd" id="1_player_ui"]
[ext_resource type="PackedScene" uid="uid://ctdylqq525jw8" path="res://scenes/player_hand.tscn" id="2_player_hand"]
[ext_resource type="PackedScene" uid="uid://4go8cugm16rq" path="res://scenes/play_zone.tscn" id="3_play_zone"]
[ext_resource type="PackedScene" uid="uid://b5w7p2j3g2j3h" path="res://scenes/round_tracker.tscn" id="4_7ctsh"]
[ext_resource type="Theme" uid="uid://ddd872xm0x3ui" path="res://assets/theme.tres" id="5_theme"]

[node name="PlayerUI" type="Node2D"]
script = ExtResource("1_player_ui")

[node name="PlayZone" parent="." instance=ExtResource("3_play_zone")]
position = Vector2(960, 540)

[node name="PlayerHand" parent="." instance=ExtResource("2_player_hand")]
position = Vector2(960, 1010)

[node name="RoundTracker" parent="." instance=ExtResource("4_7ctsh")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -181.5
offset_top = 276.0
offset_right = 181.5
offset_bottom = 360.0
grow_horizontal = 2

[node name="PlayButton" type="Button" parent="."]
offset_left = 800.0
offset_top = 760.0
offset_right = 950.0
offset_bottom = 838.0
theme = ExtResource("5_theme")
text = "Play"

[node name="PassButton" type="Button" parent="."]
offset_left = 1020.0
offset_top = 760.0
offset_right = 1175.0
offset_bottom = 838.0
theme = ExtResource("5_theme")
text = "Pass"
